5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1785_1594.log
== TEST (2019-05-30 11:14:54) 
-- CODE:
from numpy import*
v = array(eval(input("Digite um vetor:")))

i = 0
j = 0
k = 0

while(i<v[i]):
	i = i+1
	j = j+1
	k = k+1
	dano = v[i] + i*1

print(dano)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:15:27) 
-- CODE:
from numpy import*
v = array(eval(input("Digite um vetor:")))

i = 0
j = 0
k = 0

while(i<v[i]):
	i = i+1
	j = j+1
	k = k+1
	dano = v[i] + i

print(dano)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:50:54) 
-- CODE:
from numpy import*
v = array(eval(input("Digite um vetor:")))

i = 0
peso = 1
acumulador_de_danos = 0

while(i<v[i]):
	a1 = v[0]*1
	ataque = v[i]*peso
	totaldedanos = a1+ataque
i = i+1
peso = peso+1
acumuladopr_de_danos= acumulador_de_danos+totaldedanos

print(totaldedanos)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:51:35) 
-- CODE:
from numpy import*
v = array(eval(input("Digite um vetor:")))

i = 0
peso = 1
acumulador_de_danos = 0

while(i<v[i]):
	a1 = v[0]*1
	ataque = v[i]*peso
	totaldedanos = a1+ataque
i = i+1
peso = peso+1
acumuladopr_de_danos= acumulador_de_danos+totaldedanos

print(acumulador_de_danos)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:51:50) 
-- CODE:
from numpy import*
v = array(eval(input("Digite um vetor:")))

i = 0
peso = 1
acumulador_de_danos = 0

while(i<v[i]):
	a1 = v[0]*1
	ataque = v[i]*peso
	totaldedanos = a1+ataque
i = i+1
peso = peso+1
acumuladopr_de_danos= acumulador_de_danos+totaldedanos

   print(acumulador_de_danos)	
	
-- ERROR:
File "XXXX", line 16
    print(acumulador_de_danos)	
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:52:03) 
-- CODE:
from numpy import*
v = array(eval(input("Digite um vetor:")))

i = 0
peso = 1
acumulador_de_danos = 0

while(i<v[i]):
	a1 = v[0]*1
	ataque = v[i]*peso
	totaldedanos = a1+ataque
i = i+1
peso = peso+1
acumuladopr_de_danos= acumulador_de_danos+totaldedanos
print(acumulador_de_danos)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:52:50) 
-- CODE:
from numpy import*
v = array(eval(input("Digite um vetor:")))

i = 0
peso = 1
acumulador_de_danos = 0

while(i<v[i]):
	a1 = v[0]*1
	ataque = v[i]*peso
	totaldedanos = a1+ataque
i = i+1
peso = peso+1

print(totaldedanos)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
